<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    tools:context=".RecordCreationScreen">

    <NumberPicker
        android:id="@+id/numberPickerSystolic"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/number_picker_design"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <NumberPicker
        android:id="@+id/numberPickerDiastolic"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/number_picker_design"
        app:layout_constraintEnd_toStartOf="@+id/numberPickerPulse"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/numberPickerSystolic"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <NumberPicker
        android:id="@+id/numberPickerPulse"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/number_picker_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textViewSystolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="60dp"
        android:text="@string/systolic"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDiastolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/diastolic"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewPulse"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toEndOf="@+id/textViewSystolic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/pulse"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:text="@string/blood_pressure_measure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSystolic" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="83dp"
        android:text="@string/blood_pressure_measure"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textViewDiastolic" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:text="@string/pulse_measure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPulse" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="248dp"
        android:text="@string/date_and_time"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberPickerSystolic" />

    <Button
        android:id="@+id/buttonDatePick"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="42dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/baseline_calendar_month_24"
        android:hint="@string/pick_date"
        android:textColor="@color/black"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/buttonTimePick"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="54dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/baseline_access_time_24"
        android:hint="@string/pick_time"
        android:textColor="@color/black"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/buttonSaveRecord"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/number_picker_design"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDatePick" />

</androidx.constraintlayout.widget.ConstraintLayout>