<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/mainScreen">

    <fragment
        android:id="@+id/mainScreen"
        android:name="com.example.pixelmaster_test.MainScreen"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main_screen" >
        <action
            android:id="@+id/action_mainScreen_to_recordHistoryScreen"
            app:destination="@id/recordHistoryScreen" />
        <action
            android:id="@+id/action_mainScreen_to_recordCreationScreen"
            app:destination="@id/recordCreationScreen" />
    </fragment>
    <fragment
        android:id="@+id/recordCreationScreen"
        android:name="com.example.pixelmaster_test.RecordCreationScreen"
        android:label="@string/new_record"
        tools:layout="@layout/fragment_record_creation_screen" >
        <action
            android:id="@+id/action_recordCreationScreen_to_mainScreen"
            app:popUpTo="@id/mainScreen"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/recordHistoryScreen"
        android:name="com.example.pixelmaster_test.RecordHistoryScreen"
        android:label="@string/history_appbar"
        tools:layout="@layout/fragment_record_history_screen" >
        <action
            android:id="@+id/action_recordHistoryScreen_to_mainScreen"
            app:popUpTo="@id/mainScreen"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>